--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -183,7 +183,7 @@
         }
 
         .registro-input {
-            width: 100%;
+            width: 94%;
             padding: 10px;
             font-size: 1rem;
             border-radius: 5px;
@@ -205,7 +205,7 @@
     <main class="main">
         <div class="container">
             <section class="contender">
-                <h2>Seleccione su rol para continuar</h2>
+                <h2>¿Como desea continuar?</h2>
 
                 <div class="role-buttons">
                     <button class="role-button btn-cliente" id="cliente-btn" onclick="selectRole('cliente')">
@@ -234,8 +234,7 @@
                             <div class="registro-input-box">
                                 <label for="contrasena">Contraseña:</label>
                                 <input type="password" id="contrasena" name="contrasena" class="registro-input" placeholder="Contraseña" required />
-                            </div>
-                            
+                            </div>                            
                             <div class="remember-forgot">
                                 <a href="#">Restablecer contraseña</a>
                             </div>
